--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express-sessions": "^1.0.6",
     "mongoose": "^7.5.0",
     "mongoose-paginate-v2": "^1.7.31",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
